lib/mathParser.js
// Generated from math.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var mathListener = require('./mathListener').mathListener;
var mathVisitor = require('./mathVisitor').mathVisitor;

var grammarFileName = "math.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'^'", "'+'", "'-'", "'*'", "'/'" ];

var symbolicNames = [ null, null, null, null, null, null, "INT", "FLOAT", 
                      "DIGIT", "SP" ];

var ruleNames =  [ "start", "expr", "term", "number", "innerNumber", "exponent", 
                   "add", "subtract", "multiply", "divide" ];

function mathParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

mathParser.prototype = Object.create(antlr4.Parser.prototype);
mathParser.prototype.constructor = mathParser;

Object.defineProperty(mathParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

mathParser.EOF = antlr4.Token.EOF;
mathParser.T__0 = 1;
mathParser.T__1 = 2;
mathParser.T__2 = 3;
mathParser.T__3 = 4;
mathParser.T__4 = 5;
mathParser.INT = 6;
mathParser.FLOAT = 7;
mathParser.DIGIT = 8;
mathParser.SP = 9;

mathParser.RULE_start = 0;
mathParser.RULE_expr = 1;
mathParser.RULE_term = 2;
mathParser.RULE_number = 3;
mathParser.RULE_innerNumber = 4;
mathParser.RULE_exponent = 5;
mathParser.RULE_add = 6;
mathParser.RULE_subtract = 7;
mathParser.RULE_multiply = 8;
mathParser.RULE_divide = 9;


function StartContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_start;
    return this;
}

StartContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StartContext.prototype.constructor = StartContext;

StartContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

StartContext.prototype.EOF = function() {
    return this.getToken(mathParser.EOF, 0);
};

StartContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterStart(this);
	}
};

StartContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitStart(this);
	}
};

StartContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitStart(this);
    } else {
        return visitor.visitChildren(this);
    }
};




mathParser.StartContext = StartContext;

mathParser.prototype.start = function() {

    var localctx = new StartContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, mathParser.RULE_start);
    try {
        this.state = 22;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case mathParser.INT:
        case mathParser.FLOAT:
            this.enterOuterAlt(localctx, 1);
            this.state = 20;
            this.expr(0);
            break;
        case mathParser.EOF:
            this.enterOuterAlt(localctx, 2);
            this.state = 21;
            this.match(mathParser.EOF);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.term = function() {
    return this.getTypedRuleContext(TermContext,0);
};

ExprContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ExprContext.prototype.add = function() {
    return this.getTypedRuleContext(AddContext,0);
};

ExprContext.prototype.subtract = function() {
    return this.getTypedRuleContext(SubtractContext,0);
};

ExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterExpr(this);
	}
};

ExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitExpr(this);
	}
};

ExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};



mathParser.prototype.expr = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new ExprContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 2;
    this.enterRecursionRule(localctx, 2, mathParser.RULE_expr, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 25;
        this.term(0);
        this._ctx.stop = this._input.LT(-1);
        this.state = 37;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 35;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new ExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, mathParser.RULE_expr);
                    this.state = 27;
                    if (!( this.precpred(this._ctx, 2))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                    }
                    this.state = 28;
                    this.add();
                    this.state = 29;
                    this.term(0);
                    break;

                case 2:
                    localctx = new ExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, mathParser.RULE_expr);
                    this.state = 31;
                    if (!( this.precpred(this._ctx, 1))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 32;
                    this.subtract();
                    this.state = 33;
                    this.term(0);
                    break;

                } 
            }
            this.state = 39;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};


function TermContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_term;
    return this;
}

TermContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TermContext.prototype.constructor = TermContext;

TermContext.prototype.number = function() {
    return this.getTypedRuleContext(NumberContext,0);
};

TermContext.prototype.term = function() {
    return this.getTypedRuleContext(TermContext,0);
};

TermContext.prototype.multiply = function() {
    return this.getTypedRuleContext(MultiplyContext,0);
};

TermContext.prototype.divide = function() {
    return this.getTypedRuleContext(DivideContext,0);
};

TermContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterTerm(this);
	}
};

TermContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitTerm(this);
	}
};

TermContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitTerm(this);
    } else {
        return visitor.visitChildren(this);
    }
};



mathParser.prototype.term = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new TermContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, mathParser.RULE_term, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 41;
        this.number();
        this._ctx.stop = this._input.LT(-1);
        this.state = 53;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 51;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new TermContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, mathParser.RULE_term);
                    this.state = 43;
                    if (!( this.precpred(this._ctx, 2))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                    }
                    this.state = 44;
                    this.multiply();
                    this.state = 45;
                    this.number();
                    break;

                case 2:
                    localctx = new TermContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, mathParser.RULE_term);
                    this.state = 47;
                    if (!( this.precpred(this._ctx, 1))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 48;
                    this.divide();
                    this.state = 49;
                    this.number();
                    break;

                } 
            }
            this.state = 55;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};


function NumberContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_number;
    return this;
}

NumberContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NumberContext.prototype.constructor = NumberContext;

NumberContext.prototype.innerNumber = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InnerNumberContext);
    } else {
        return this.getTypedRuleContext(InnerNumberContext,i);
    }
};

NumberContext.prototype.exponent = function() {
    return this.getTypedRuleContext(ExponentContext,0);
};

NumberContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterNumber(this);
	}
};

NumberContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitNumber(this);
	}
};

NumberContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitNumber(this);
    } else {
        return visitor.visitChildren(this);
    }
};




mathParser.NumberContext = NumberContext;

mathParser.prototype.number = function() {

    var localctx = new NumberContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, mathParser.RULE_number);
    try {
        this.state = 61;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 56;
            this.innerNumber();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 57;
            this.innerNumber();
            this.state = 58;
            this.exponent();
            this.state = 59;
            this.innerNumber();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function InnerNumberContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_innerNumber;
    return this;
}

InnerNumberContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InnerNumberContext.prototype.constructor = InnerNumberContext;

InnerNumberContext.prototype.INT = function() {
    return this.getToken(mathParser.INT, 0);
};

InnerNumberContext.prototype.FLOAT = function() {
    return this.getToken(mathParser.FLOAT, 0);
};

InnerNumberContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterInnerNumber(this);
	}
};

InnerNumberContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitInnerNumber(this);
	}
};

InnerNumberContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitInnerNumber(this);
    } else {
        return visitor.visitChildren(this);
    }
};




mathParser.InnerNumberContext = InnerNumberContext;

mathParser.prototype.innerNumber = function() {

    var localctx = new InnerNumberContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, mathParser.RULE_innerNumber);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        _la = this._input.LA(1);
        if(!(_la===mathParser.INT || _la===mathParser.FLOAT)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExponentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_exponent;
    return this;
}

ExponentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExponentContext.prototype.constructor = ExponentContext;


ExponentContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterExponent(this);
	}
};

ExponentContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitExponent(this);
	}
};

ExponentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitExponent(this);
    } else {
        return visitor.visitChildren(this);
    }
};




mathParser.ExponentContext = ExponentContext;

mathParser.prototype.exponent = function() {

    var localctx = new ExponentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, mathParser.RULE_exponent);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 65;
        this.match(mathParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AddContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_add;
    return this;
}

AddContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AddContext.prototype.constructor = AddContext;


AddContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterAdd(this);
	}
};

AddContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitAdd(this);
	}
};

AddContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitAdd(this);
    } else {
        return visitor.visitChildren(this);
    }
};




mathParser.AddContext = AddContext;

mathParser.prototype.add = function() {

    var localctx = new AddContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, mathParser.RULE_add);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 67;
        this.match(mathParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SubtractContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_subtract;
    return this;
}

SubtractContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SubtractContext.prototype.constructor = SubtractContext;


SubtractContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterSubtract(this);
	}
};

SubtractContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitSubtract(this);
	}
};

SubtractContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitSubtract(this);
    } else {
        return visitor.visitChildren(this);
    }
};




mathParser.SubtractContext = SubtractContext;

mathParser.prototype.subtract = function() {

    var localctx = new SubtractContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, mathParser.RULE_subtract);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this.match(mathParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MultiplyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_multiply;
    return this;
}

MultiplyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MultiplyContext.prototype.constructor = MultiplyContext;


MultiplyContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterMultiply(this);
	}
};

MultiplyContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitMultiply(this);
	}
};

MultiplyContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitMultiply(this);
    } else {
        return visitor.visitChildren(this);
    }
};




mathParser.MultiplyContext = MultiplyContext;

mathParser.prototype.multiply = function() {

    var localctx = new MultiplyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, mathParser.RULE_multiply);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        this.match(mathParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DivideContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = mathParser.RULE_divide;
    return this;
}

DivideContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DivideContext.prototype.constructor = DivideContext;


DivideContext.prototype.enterRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.enterDivide(this);
	}
};

DivideContext.prototype.exitRule = function(listener) {
    if(listener instanceof mathListener ) {
        listener.exitDivide(this);
	}
};

DivideContext.prototype.accept = function(visitor) {
    if ( visitor instanceof mathVisitor ) {
        return visitor.visitDivide(this);
    } else {
        return visitor.visitChildren(this);
    }
};




mathParser.DivideContext = DivideContext;

mathParser.prototype.divide = function() {

    var localctx = new DivideContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, mathParser.RULE_divide);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 73;
        this.match(mathParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


mathParser.prototype.sempred = function(localctx, ruleIndex, predIndex) {
	switch(ruleIndex) {
	case 1:
			return this.expr_sempred(localctx, predIndex);
	case 2:
			return this.term_sempred(localctx, predIndex);
    default:
        throw "No predicate with index:" + ruleIndex;
   }
};

mathParser.prototype.expr_sempred = function(localctx, predIndex) {
	switch(predIndex) {
		case 0:
			return this.precpred(this._ctx, 2);
		case 1:
			return this.precpred(this._ctx, 1);
		default:
			throw "No predicate with index:" + predIndex;
	}
};

mathParser.prototype.term_sempred = function(localctx, predIndex) {
	switch(predIndex) {
		case 2:
			return this.precpred(this._ctx, 2);
		case 3:
			return this.precpred(this._ctx, 1);
		default:
			throw "No predicate with index:" + predIndex;
	}
};


exports.mathParser = mathParser;
